# fuji

./: .gitignore  LICENSE  README.md  build.sh  dev.js  dev.sh  index.html  main.js  package.json  packages.dhall  postcss.config.js  spago.dhall  tailwind.config.js
.github/workflows/: release.yml
src/: Api.js  Api.purs  App.purs  Main.purs  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/App/: Eval.purs  Route.purs  Types.purs
src/App/Render/: CurrentTag.purs  InitModal.purs  Navbar.purs
src/Component/: LinkPane.purs  Note.purs
src/FFI/: DOM.js  DOM.purs  Http.js  Http.purs  Tauri.js  Tauri.purs
src/Fuji/: Prelude.purs
src/Model/: Link.purs  LinkDetail.purs  Settings.purs  Store.purs  Tag.purs  Timestamp.purs
src/js/: meta-parser.js  meta-proxy.js  tauri.js
