workspace = { }

[package]
name = "fuji"
version = "0.1.0"
description = "Fuji"
authors = [ "Nonbili" ]
license = "BSD-3-Clause"
repository = "https://github.com/nonbili/fuji"
default-run = "fuji"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "jp.nonbili.fuji"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9.1", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "fuji"
path = "src/main.rs"
